syntax = "proto3";

package auth;

option go_package = "github.com/fire9900/auth/pkg/g_rpc";

service AuthService {
  rpc ValidateToken (TokenRequest) returns (TokenResponse) {}
  rpc GetUserID (TokenRequest) returns (UserIDResponse) {}
}

message TokenRequest {
  string token = 1;
}

message TokenResponse {
  bool valid = 1;
  string error = 2;
}

message UserIDResponse {
  int32 user_id = 1;
  string error = 2;
}